# notification-document-download-api

./: .dockerignore  .env.enc  .env.enc.aws  .env.example  .git-blame-ignore-revs  .gitignore  Makefile  README.md  application.py  catalog-info.yaml  gunicorn_config.py  mypy.ini  pyproject.toml  requirements-app.txt  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: notify-dev-entrypoint.sh
.github/: main.workflow
.github/workflows/: backstage-catalog-helper.yml  codeql.yml  dev_branch_build_push_images.yml  docker-vulnerability-scan.yml  docker.yaml  export_github_data.yml  generate-sbom.yml  generate_sbom.yml  main.yaml  master.yml  ossf-scorecard.yml  push.yml  reusable_push_ecr.yml  s3-backup.yml
app/: __init__.py  config.py  healthcheck.py  monkeytype_config.py  xray_test.py
app/download/: views.py
app/upload/: errors.py  views.py
app/utils/: __init__.py  antivirus.py  authentication.py  guardduty.py  logging.py  mlwr.py  scan_files.py  store.py  urls.py
ci/: Dockerfile  cloudbuild-master.yaml
scripts/: callManifestsRollout.sh
tests/: conftest.py  test_config.py  test_healthcheck.py
tests/download/: test_views.py
tests/upload/: test_views.py
tests/utils/: test_antivirus.py  test_authentication.py  test_scan_files_store_fallback.py  test_store.py  test_store_fallback.py  test_urls.py
