[tool.black]
line-length = 110
target-version = ['py37', 'py38', 'py39', 'py310']
include = '(app|tests)/.*\.pyi?$'

[tool.poetry]
name = "notification-document-download-api"
version = "0.1.0"
description = "Document Download API"
authors = ["Canadian Digital Service"]
license = "MIT license"
readme = "README.md"
packages = []

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10.9"

awscli-cwlogs = "1.4.6"
Flask = "2.3.3"
Flask-Env = "2.0.0"
gevent = "23.9.0"

# PaaS

gunicorn = "20.1.0"

notifications-utils = { git = "https://github.com/cds-snc/notifier-utils.git", tag = "52.1.5" }
pycryptodome = "*"

python-dotenv = "1.0.0"
python-magic = "0.4.27"
PyYAML = "6.0.1"

requests = { extras = ["security"], version = "*" }

[tool.poetry.group.test.dependencies]

coveralls = "1.11.1"
freezegun = "1.2.2"

jinja2-cli = { extras = ["yaml"], version = "0.8.2" }
mypy = "1.0.1"

pytest = "7.2.0"
pytest-cov = "3.0.0"
pytest-env = "0.8.1"
pytest-mock = "3.10.0"

requests-mock = "1.10.0"
ruff = "^0.2.1"
types-requests = "2.28.11"


[tool.ruff]
target-version = "py310"
exclude = [
    "venv*",
    "__pycache__",
    "node_modules",
    "cache",
    "migrations",
    "build",
]
extend-include = ['(app|migrations|tests)/.*\.pyi?$']
src = ["app", "migrations", "tests"]
# Ruff formatter will wrap lines at a length of 130 characters.
line-length = 130
indent-width = 4

[tool.ruff.lint]
select = [
    # PyFlakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    "I002",
]
ignore = ["E203", "E501", "E402"]

# Provide line length leeway for docstrings
[tool.ruff.lint.pycodestyle]
max-doc-length = 170
# Enforce doc string format? (google, numpy or pep257)
# convention = "google"

[tool.ruff.format]
# Match black formatting
# Double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"
