[tool.black]
line-length = 110
target-version = ['py37', 'py38', 'py39', 'py310', 'py312']
include = '(app|tests)/.*\.pyi?$'

[tool.poetry]
name = "notification-document-download-api"
version = "0.1.0"
description = "Document Download API"
authors = ["Canadian Digital Service"]
license = "MIT license"
readme = "README.md"
packages = []

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.12.7"
aws-xray-sdk = "^2.14.0"

awscli-cwlogs = "1.4.6"
Flask = "2.3.3"
Flask-Env = "2.0.0"
gevent = "24.2.1"
# PaaS
gunicorn = "22.0.0"
newrelic = "10.3.0"

notifications-utils = { git = "https://github.com/cds-snc/notifier-utils.git", tag = "53.0.1"}
pycryptodome = "*"

python-dotenv = "1.0.1"
python-magic = "0.4.27"
PyYAML = "6.0.1"

requests = { extras = ["security"], version = "*" }
types-aws-xray-sdk = "^2.14.0.20240606"

[tool.poetry.group.test.dependencies]
coveralls = "1.11.1"
freezegun = "1.5.1"
jinja2-cli = { extras = ["yaml"], version = "0.8.2" }
monkeytype = "23.3.0"
mypy = "1.0.1"
poethepoet = "^0.24.4"

pytest = "7.2.0"
pytest-cov = "3.0.0"
pytest-env = "0.8.1"
pytest-mock = "3.14.0"

requests-mock = "1.10.0"
ruff = "^0.8.2"
types-requests = "2.28.11"


# Poe the Poet tasks
[tool.poe.tasks.trace-app]
help = "Runs the app with monkeytype type collection enabled."
shell = """
        monkeytype run -m flask run -p 7000 --host=0.0.0.0
"""

[tool.poe.tasks.trace-tests]
help = "Runs a test suite or single test through MonkeyType, generating a record of type annotation traces monkeytype.sqlite3"
shell = """
    if [ -z "${method}" ]; then
        monkeytype run -m pytest '/tests/app/${test-path}::${method}'
    else
        monkeytype run -m pytest '/tests/app/${test-path}'
    fi
"""
    # Define arguments for trace-tests
    [tool.poe.tasks.trace-tests.args.test-path]
    help = "Path to the test file to run. /tests/app/ can be omitted. e.g. poe trace-tests -p main/test_contact.py"
    options = ["-p", "--path"]
    type = "string"
    required = true

    [tool.poe.tasks.trace-tests.args.method]
    help = "Name of the test method to execute and trace"
    options = ["-m", "--method"]
    type = "string"
    default = ""
    required = false

[tool.poe.tasks.list-modules]
help = "Lists all files and modules that have trace data associated with them in monkeytype.sqlite3"
cmd = "monkeytype list-modules"

# Composite task that uses list-modules to obtain a list of files and modules
[tool.poe.tasks.apply-annotations]
help = "Applies ALL known type annotations stored in monkeytype.sqlite3"
shell = """
    for trace in ${TRACES}
    do
        monkeytype apply $trace
    done
"""
deps = ["list-modules"]
uses = { TRACES = "list-modules"}

[tool.ruff]
target-version = "py310"
exclude = [
    "venv*",
    "__pycache__",
    "node_modules",
    "cache",
    "migrations",
    "build",
]
extend-include = ['(app|migrations|tests)/.*\.pyi?$']
src = ["app", "migrations", "tests"]
# Ruff formatter will wrap lines at a length of 130 characters.
line-length = 130
indent-width = 4

[tool.ruff.lint]
select = [
    # PyFlakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    "I002",
]
ignore = ["E203", "E501", "E402"]

# Provide line length leeway for docstrings
[tool.ruff.lint.pycodestyle]
max-doc-length = 170
# Enforce doc string format? (google, numpy or pep257)
# convention = "google"

[tool.ruff.format]
# Match black formatting
# Double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"
